Updating jekyll theming.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Fulhame Docs
 description: Fulhame Documentation for EPCC's Catalyst System
 theme: jekyll-theme-dinky
+show_downloads: false
